@@ -1,75 +1,62 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mt</groupId>
     <artifactId>maven-web-application</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <version>3.1.2-SNAPSHOT</version>
-
-    <name>maven-web-application</name>
-    <description>Maven Web Project for Java Project</description>
-
-    <organization>
-        <name>JOMACS IT SOLUTIONS</name>
-        <url>http://jomacsit.com/</url>
-    </organization>
 
     <properties>
-        <jdk.version>1.8</jdk.version>
-        <spring.version>5.1.2.RELEASE</spring.version>
-        <junit.version>4.11</junit.version>
-        <log4j.version>1.2.17</log4j.version>
-        <sonar.host.url>http://18.221.207.24:9000/</sonar.host.url>
-        <sonar.login>admin</sonar.login>
-        <sonar.password>admin</sonar.password>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
-        <!-- Servlet API -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- Spring Web and Spring Context -->
+        <!-- Add necessary dependencies here -->
+        <!-- Example dependencies for Spring and JSON libraries -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>5.1.2.RELEASE</version>
+            <version>5.3.9</version>
         </dependency>
-        
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>5.1.2.RELEASE</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.1.2.RELEASE</version>
-        </dependency>
-
-        <!-- JSON Library -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
-
-        <!-- Your other dependencies -->
+        <!-- Add more dependencies as needed -->
     </dependencies>
 
     <build>
-        <finalName>web-app</finalName>
         <plugins>
-            <!-- Add your plugins here -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+
+            <!-- SonarQube Plugin -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>4.0.0.4187</version> <!-- Update to the latest version -->
+            </plugin>
         </plugins>
     </build>
-</project>
 
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <!-- JVM options for SonarQube Plugin -->
+                <sonar.java.additionalArgs>--add-opens java.base/java.lang=ALL-UNNAMED</sonar.java.additionalArgs>
+            </properties>
+        </profile>
+    </profiles>
+</project>
